Removed gaps between bg images on splash page. Luukin guuud. Still a little buggy, but getting closer.

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -45,6 +45,13 @@ i {
 }
 
 
+/*======================= fullPage Sticky Scrolling Styling ===============================================*/
+
+.table {
+	margin-bottom: 0px;
+}
+
+
 /*============================= Splash Page Styling ===============================================*/
 
 
